--- a/src/app/components/first/first.component.html
+++ b/src/app/components/first/first.component.html
@@ -1,1 +1,14 @@
-<p>first works!</p>
+<h2>First Component</h2>
+
+<nav>
+  <ul>
+    <li>
+      <a routerLink="child-a" routerLinkActive="router-link-active">Child A</a>
+    </li>
+    <li>
+      <a routerLink="child-b" routerLinkActive="router-link-active">Child B</a>
+    </li>
+  </ul>
+</nav>
+
+<router-outlet></router-outlet>
